Ajuste de la vista de Portafolio. Maquetación de la vista de Login-whs. Efectos en botones e iconos de hacemos

--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@ sssss/    `sssss:      ```         hdddds.``-ydddd+ sdddds.``-ydddd+ /ddddd/oddd
             <div class="col-100">
                 <h2>¿Qué hacemos?</h2>
                 <div class="tabs flexbox">
-                    <a href="#" class="act">
+                    <a class="act">
                         <div class="btn bluebg-1"><i class="icon ni-pencil"></i></div>
                     </a>
-                    <a href="#">
+                    <a>
                         <div class="btn bluebg-2"><i class="icon ni-webdev"></i></div>
                     </a>
-                    <a href="#">
+                    <a>
                         <div class="btn bluebg-3"><i class="icon ni-connection"></i></div>
                     </a>
                 </div>
@@ -137,13 +137,13 @@ sssss/    `sssss:      ```         hdddds.``-ydddd+ sdddds.``-ydddd+ /ddddd/oddd
             <div class="col-100">
                 <h2>Portafolio</h2>
                 <div class="tabs flexbox">
-                    <a href="#" class="act">
+                    <a class="act">
                         <div class="btn orangebg-1"><i class="icon ni-star"></i></div>
                     </a>
-                    <a href="#">
+                    <a>
                         <div class="btn orangebg-2"><i class="icon ni-responsive"></i></div>
                     </a>
-                    <a href="#">
+                    <a>
                         <div class="btn orangebg-3"><i class="icon ni-logo"></i></div>
                     </a>
                 </div>
@@ -226,13 +226,13 @@ sssss/    `sssss:      ```         hdddds.``-ydddd+ sdddds.``-ydddd+ /ddddd/oddd
             <div class="col-100">
                 <h2>Clientes</h2>
                 <div class="tabs flexbox">
-                    <a href="#" class="act">
+                    <a class="act">
                         <div class="btn redbg-1"><i class="icon ni-chat"></i></div>
                     </a>
-                    <a href="#">
+                    <a>
                         <div class="btn redbg-2"></div>
                     </a>
-                    <a href="#">
+                    <a>
                         <div class="btn redbg-3"></div>
                     </a>
                 </div>
@@ -252,13 +252,13 @@ sssss/    `sssss:      ```         hdddds.``-ydddd+ sdddds.``-ydddd+ /ddddd/oddd
             <div class="col-100">
                 <h2>Contacto</h2>
                 <div class="tabs flexbox">
-                    <a href="#" class="act">
+                    <a class="act">
                         <div class="btn aquabg-1"><i class="icon ni-pin"></i></div>
                     </a>
-                    <a href="#">
+                    <a>
                         <div class="btn aquabg-2"><i class="icon ni-message"></i></div>
                     </a>
-                    <a href="#">
+                    <a>
                         <div class="btn aquabg-3"></div>
                     </a>
                 </div>
@@ -271,14 +271,14 @@ sssss/    `sssss:      ```         hdddds.``-ydddd+ sdddds.``-ydddd+ /ddddd/oddd
                     <label><input type="text" name="name" placeholder="Nombre y Apellido"></label>
                     <label><input type="text" name="email" placeholder="Correo electrónico"></label>
                     <textarea placeholder="Mensaje" rows="1"></textarea>
-                    <button>Enviar<i class="fas fa-arrow-right"></i></button>
+                    <button class="aquabg-1">Enviar<i class="fas fa-arrow-right"></i></button>
                 </form>
             </div>
         </section>
 
         <!--Pie de página-->
         <footer class="flexbox">
-            <div class="col-15 log"></div>
+            <div class="col-15"><a href="index.html" class="log"></a></div>
             <div class="col-75 flex">
                 <p>Derechos reservados 2006-2018</p>
             </div>
