Correcciones de botones

--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@ sssss/    `sssss:      ```         hdddds.``-ydddd+ sdddds.``-ydddd+ /ddddd/oddd
                     <h2>Nosotros</h2>
                     <div class="tabs flexbox">
                         <a href="#" class="act">
-                            <div class="btn greenbg-1"><i class="icon ni-rocket"></i></div>
+                            <div class="btn btn-disp greenbg-1"><i class="icon ni-rocket"></i></div>
                         </a>
                         <a href="#">
-                            <div class="btn greenbg-2"><i class="icon ni-brain"></i></div>
+                            <div class="btn btn-disp greenbg-2"><i class="icon ni-brain"></i></div>
                         </a>
                         <a href="#">
-                            <div class="btn greenbg-3"><i class="icon ni-ball"></i></div>
+                            <div class="btn btn-disp greenbg-3"><i class="icon ni-ball"></i></div>
                         </a>
                     </div>
                     <div>
@@ -106,13 +106,13 @@ sssss/    `sssss:      ```         hdddds.``-ydddd+ sdddds.``-ydddd+ /ddddd/oddd
                 <h2>¿Qué hacemos?</h2>
                 <div class="tabs flexbox">
                     <a class="act">
-                        <div class="btn bluebg-1"><i class="icon ni-pencil"></i></div>
+                        <div class="btn btn-disp bluebg-1"><i class="icon ni-pencil"></i></div>
                     </a>
                     <a>
-                        <div class="btn bluebg-2"><i class="icon ni-webdev"></i></div>
+                        <div class="btn btn-disp bluebg-2"><i class="icon ni-webdev"></i></div>
                     </a>
                     <a>
-                        <div class="btn bluebg-3"><i class="icon ni-connection"></i></div>
+                        <div class="btn btn-disp bluebg-3"><i class="icon ni-connection"></i></div>
                     </a>
                 </div>
                 <h3>Diseño gráfico</h3>
@@ -143,13 +143,13 @@ sssss/    `sssss:      ```         hdddds.``-ydddd+ sdddds.``-ydddd+ /ddddd/oddd
                 <h2>Portafolio</h2>
                 <div class="tabs flexbox">
                     <a class="act">
-                        <div class="btn orangebg-1"><i class="icon ni-star"></i></div>
+                        <div class="btn btn-disp orangebg-1"><i class="icon ni-star"></i></div>
                     </a>
                     <a>
-                        <div class="btn orangebg-2"><i class="icon ni-responsive"></i></div>
+                        <div class="btn btn-disp orangebg-2"><i class="icon ni-responsive"></i></div>
                     </a>
                     <a>
-                        <div class="btn orangebg-3"><i class="icon ni-logo"></i></div>
+                        <div class="btn btn-disp orangebg-3"><i class="icon ni-logo"></i></div>
                     </a>
                 </div>
                 <h3>Branding</h3>
@@ -234,7 +234,7 @@ sssss/    `sssss:      ```         hdddds.``-ydddd+ sdddds.``-ydddd+ /ddddd/oddd
                 <h2>Clientes</h2>
                 <div class="tabs flexbox">
                     <a class="act">
-                        <div class="btn redbg-1"><i class="icon ni-chat"></i></div>
+                        <div class="btn btn-disp redbg-1"><i class="icon ni-chat"></i></div>
                     </a>
                     <a>
                         <div class="btn redbg-2"></div>
@@ -276,10 +276,10 @@ sssss/    `sssss:      ```         hdddds.``-ydddd+ sdddds.``-ydddd+ /ddddd/oddd
                 <h2>Contacto</h2>
                 <div class="tabs flexbox">
                     <a class="act">
-                        <div class="btn aquabg-1"><i class="icon ni-message"></i></div>
+                        <div class="btn btn-disp aquabg-1"><i class="icon ni-message"></i></div>
                     </a>
                     <a>
-                        <div class="btn aquabg-2"><i class="icon ni-pin"></i></div>
+                        <div class="btn btn-disp aquabg-2"><i class="icon ni-pin"></i></div>
                     </a>
                     <a>
                         <div class="btn aquabg-3"></div>
