Ajustes de iconos en carrousel de clientes. Ajutes de botones en todas las vistas. Estilización de vista de font icons

--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@ sssss/    `sssss:      ```         hdddds.``-ydddd+ sdddds.``-ydddd+ /ddddd/oddd
                 <section id="Nos">
                     <h2>Nosotros</h2>
                     <div class="tabs flexbox">
-                        <a href="#" class="act">
+                        <a href="#" class="act disp">
                             <div class="btn btn-disp greenbg-1"><i class="icon ni-rocket"></i></div>
                         </a>
-                        <a href="#">
+                        <a class="disp" href="#">
                             <div class="btn btn-disp greenbg-2"><i class="icon ni-brain"></i></div>
                         </a>
-                        <a href="#">
+                        <a class="disp" href="#">
                             <div class="btn btn-disp greenbg-3"><i class="icon ni-ball"></i></div>
                         </a>
                     </div>
@@ -105,13 +105,13 @@ sssss/    `sssss:      ```         hdddds.``-ydddd+ sdddds.``-ydddd+ /ddddd/oddd
             <div class="col-100">
                 <h2>¿Qué hacemos?</h2>
                 <div class="tabs flexbox">
-                    <a class="act">
+                    <a class="act disp">
                         <div class="btn btn-disp bluebg-1"><i class="icon ni-pencil"></i></div>
                     </a>
-                    <a>
+                    <a class="disp">
                         <div class="btn btn-disp bluebg-2"><i class="icon ni-webdev"></i></div>
                     </a>
-                    <a>
+                    <a class="disp">
                         <div class="btn btn-disp bluebg-3"><i class="icon ni-connection"></i></div>
                     </a>
                 </div>
@@ -142,13 +142,13 @@ sssss/    `sssss:      ```         hdddds.``-ydddd+ sdddds.``-ydddd+ /ddddd/oddd
             <div class="col-100">
                 <h2>Portafolio</h2>
                 <div class="tabs flexbox">
-                    <a class="act">
+                    <a class="act disp">
                         <div class="btn btn-disp orangebg-1"><i class="icon ni-star"></i></div>
                     </a>
-                    <a>
+                    <a class="disp">
                         <div class="btn btn-disp orangebg-2"><i class="icon ni-responsive"></i></div>
                     </a>
-                    <a>
+                    <a class="disp">
                         <div class="btn btn-disp orangebg-3"><i class="icon ni-logo"></i></div>
                     </a>
                 </div>
@@ -233,7 +233,7 @@ sssss/    `sssss:      ```         hdddds.``-ydddd+ sdddds.``-ydddd+ /ddddd/oddd
             <div class="col-100">
                 <h2>Clientes</h2>
                 <div class="tabs flexbox">
-                    <a class="act">
+                    <a class="act disp">
                         <div class="btn btn-disp redbg-1"><i class="icon ni-chat"></i></div>
                     </a>
                     <a>
@@ -275,10 +275,10 @@ sssss/    `sssss:      ```         hdddds.``-ydddd+ sdddds.``-ydddd+ /ddddd/oddd
             <div class="col-100">
                 <h2>Contacto</h2>
                 <div class="tabs flexbox">
-                    <a class="act">
+                    <a class="act disp">
                         <div class="btn btn-disp aquabg-1"><i class="icon ni-message"></i></div>
                     </a>
-                    <a>
+                    <a class="disp">
                         <div class="btn btn-disp aquabg-2"><i class="icon ni-pin"></i></div>
                     </a>
                     <a>
