--- a/portafolio.html
+++ b/portafolio.html
@@ -66,15 +66,15 @@ sssss/    `sssss:      ```         hdddds.``-ydddd+ sdddds.``-ydddd+ /ddddd/oddd
         <section id="Por" class="porfull flexbox">
             <div class="col-100">
                 <h2>Portafolio</h2>
-                <div class="tabs flexbox">
+                <div class="tabs flexbox disp">
                     <a href="#" class="act">
-                        <div class="btn orangebg-1"><i class="icon ni-star"></i></div>
+                        <div class="btn btn-disp orangebg-1"><i class="icon ni-star"></i></div>
                     </a>
-                    <a href="#">
-                        <div class="btn orangebg-2"><i class="icon ni-responsive"></i></div>
+                    <a class="disp" href="#">
+                        <div class="btn btn-disp orangebg-2"><i class="icon ni-responsive"></i></div>
                     </a>
-                    <a href="#">
-                        <div class="btn orangebg-3"><i class="icon ni-logo"></i></div>
+                    <a class="disp" href="#">
+                        <div class="btn btn-disp orangebg-3"><i class="icon ni-logo"></i></div>
                     </a>
                 </div>
                 <div class="porfull-resu col-50"> 
