--- a/login-whs.html
+++ b/login-whs.html
@@ -67,13 +67,13 @@ sssss/    `sssss:      ```         hdddds.``-ydddd+ sdddds.``-ydddd+ /ddddd/oddd
             <div class="col-100">
                 <h2>Web Hosting Services</h2>
                 <div class="tabs flexbox">
-                    <a href="#" class="act">
-                        <div class="btn bluebg-1"><i class="icon ni-gear"></i></div>
+                    <a href="#" class="act disp">
+                        <div class="btn btn-disp bluebg-1"><i class="icon ni-gear"></i></div>
                     </a>
-                    <a href="#">
+                    <a>
                         <div class="btn bluebg-2"></div>
                     </a>
-                    <a href="#">
+                    <a>
                         <div class="btn bluebg-3"></div>
                     </a>
                 </div>
