- Archivo helper.js con DB, - Imágenes portafolio. - Contructor de proyectos. falta arrays de imágenes - Vista reestructurada

--- a/template-test.html
+++ b/template-test.html
@@ -12,8 +12,11 @@
     <div id="bio" class="col-1 clear-fix">
       <div class="bio-info flex-box"></div>
     </div>
+    <div id="projects" class="col-1 clear-fix">
+    </div>
     </div>
   <script src="js/jQuery.js"></script>
+  <script src="js/helper.js"></script>
   <script src="js/builder.js"></script>
   </script>
 </body>
