Nuevas imagenes de Portafolio, Ajustes de diseño y diagramación de caracteres en vista de Fonts icons. Reorginzación de logos en carousel de Clientes

--- a/index.html
+++ b/index.html
@@ -166,12 +166,12 @@ sssss/    `sssss:      ```         hdddds.``-ydddd+ sdddds.``-ydddd+ /ddddd/oddd
                     </li>
                     <li>
                         <div class="circleBg orangebg-1">
-                            <a href="#"><img class="circle" src="img/mdq-pap-200.jpg"/></a>
+                            <a href="#"><img class="circle" src="img/mdq-man1-200.jpg"/></a>
                         </div>
                     </li>
                     <li>
                         <div class="squareBg orangebg-1">
-                            <a href="#"><img class="square" src="img/mdq-man-200.jpg"/></a>
+                            <a href="#"><img class="square" src="img/mdq-man3-200.jpg"/></a>
                         </div>
                     </li>
                 </ul>
@@ -188,12 +188,12 @@ sssss/    `sssss:      ```         hdddds.``-ydddd+ sdddds.``-ydddd+ /ddddd/oddd
                     </li>
                     <li>
                         <div class="circleBg orangebg-1">
-                            <a href="#"><img class="circle" src="img/tob-pap-200.jpg"/></a>
+                            <a href="#"><img class="circle" src="img/tob-pap1-200.jpg"/></a>
                         </div>
                     </li>
                     <li>
                         <div class="triangleBg orangebg-1">
-                            <a href="#"><img class="triangle" src="img/tob-web-200.jpg"/></a>
+                            <a href="#"><img class="triangle" src="img/tob-web1-200.jpg"/></a>
                         </div>
                     </li>
                 </ul>
@@ -247,12 +247,12 @@ sssss/    `sssss:      ```         hdddds.``-ydddd+ sdddds.``-ydddd+ /ddddd/oddd
             <div class="col-100 slider flexbox">
                 <div class="bs"></div>
                 <div class="cd"></div>
-                <div class="gp"></div>
                 <div class="cms"></div>
+                <div class="gp"></div>
                 <div class="bc"></div>
                 <div class="ss"></div>
-                <div class="cmg"></div>
                 <div class="tob"></div>
+                <div class="cmg"></div>
                 <div class="bdl"></div>
                 <div class="gm"></div>
                 <div class="emn"></div>
@@ -261,12 +261,12 @@ sssss/    `sssss:      ```         hdddds.``-ydddd+ sdddds.``-ydddd+ /ddddd/oddd
                 <div class="seg"></div>
                 <div class="per"></div>
                 <div class="qui"></div>
-                <div class="no"></div>
                 <div class="qfs"></div>
-                <div class="lcdh"></div>
+                <div class="no"></div>
                 <div class="art"></div>
-                <div class="uni"></div>
+                <div class="lcdh"></div>
                 <div class="sh"></div>
+                <div class="uni"></div>
             </div>
         </section>
 
