--- a/portafolio.html
+++ b/portafolio.html
@@ -94,12 +94,12 @@ sssss/    `sssss:      ```         hdddds.``-ydddd+ sdddds.``-ydddd+ /ddddd/oddd
                     </li>
                     <li>
                         <div class="circleBg orangebg-1">
-                            <a href="#"><img class="circle" src="img/mdq-pap-200.jpg"/></a>
+                            <a href="#"><img class="circle" src="img/mdq-man1-200.jpg"/></a>
                         </div>
                     </li>
                     <li>
                         <div class="squareBg orangebg-1">
-                            <a href="#"><img class="square" src="img/mdq-man-200.jpg"/></a>
+                            <a href="#"><img class="square" src="img/mdq-man3-200.jpg"/></a>
                         </div>
                     </li>
                 </ul>
@@ -116,12 +116,12 @@ sssss/    `sssss:      ```         hdddds.``-ydddd+ sdddds.``-ydddd+ /ddddd/oddd
                     </li>
                     <li>
                         <div class="circleBg orangebg-1">
-                            <a href="#"><img class="circle" src="img/tob-pap-200.jpg"/></a>
+                            <a href="#"><img class="circle" src="img/tob-pap1-200.jpg"/></a>
                         </div>
                     </li>
                     <li>
                         <div class="triangleBg orangebg-1">
-                            <a href="#"><img class="triangle" src="img/tob-web-200.jpg"/></a>
+                            <a href="#"><img class="triangle" src="img/tob-web1-200.jpg"/></a>
                         </div>
                     </li>
                 </ul>
@@ -159,13 +159,13 @@ sssss/    `sssss:      ```         hdddds.``-ydddd+ sdddds.``-ydddd+ /ddddd/oddd
                         </div>
                     </li>
                     <li>
-                        <div class="triangleBg orangebg-1">
-                            <a href="#"><img class="triangle" src="img/qfs-web-200.jpg"/></a>
+                        <div class="circleBg orangebg-1">
+                            <a href="#"><img class="circle" src="img/qfs-web-200.jpg"/></a>
                         </div>
                     </li>
                     <li>
-                        <div class="circleBg orangebg-1">
-                            <a href="#"><img class="circle" src="img/qfs-pap-200.jpg"/></a>
+                        <div class="triangleBg orangebg-1">
+                            <a href="#"><img class="triangle" src="img/qfs-pap-200.jpg"/></a>
                         </div>
                     </li>
                 </ul>
@@ -226,7 +226,7 @@ sssss/    `sssss:      ```         hdddds.``-ydddd+ sdddds.``-ydddd+ /ddddd/oddd
                     </li>
                     <li>
                         <div class="squareBg orangebg-1">
-                            <a href="#"><img class="square" src="img/emn-pap-200.jpg"/></a>
+                            <a href="#"><img class="square" src="img/emn-pap1-200.jpg"/></a>
                         </div>
                     </li>
                     <li>
@@ -248,7 +248,7 @@ sssss/    `sssss:      ```         hdddds.``-ydddd+ sdddds.``-ydddd+ /ddddd/oddd
                     </li>
                     <li>
                         <div class="circleBg orangebg-1">
-                            <a href="#"><img class="circle" src="img/gm-pap-200.jpg"/></a>
+                            <a href="#"><img class="circle" src="img/gm-pap1-200.jpg"/></a>
                         </div>
                     </li>
                     <li>
@@ -270,12 +270,12 @@ sssss/    `sssss:      ```         hdddds.``-ydddd+ sdddds.``-ydddd+ /ddddd/oddd
                     </li>
                     <li>
                         <div class="circleBg orangebg-1">
-                            <a href="#"><img class="circle" src="img/gp-web-200.jpg"/></a>
+                            <a href="#"><img class="circle" src="img/gp-web1-200.jpg"/></a>
                         </div>
                     </li>
                     <li>
-                        <div class="triangleBg orangebg-1">
-                            <a href="#"><img class="triangle" src="img/gp-cat2-200.jpg"/></a>
+                        <div class="squareBg orangebg-1">
+                            <a href="#"><img class="square" src="img/gp-cat2-200.jpg"/></a>
                         </div>
                     </li>
                 </ul>
