Correcciones de diseño en la vista de Fonts icons

--- a/font-icons.html
+++ b/font-icons.html
@@ -65,12 +65,11 @@ sssss/    `sssss:      ```         hdddds.``-ydddd+ sdddds.``-ydddd+ /ddddd/oddd
         <!--Cabecera secundaria-->
         <section class="line">
             <h1>Novanet-icons</h1>
-            <p class="head-subtit">Esta fuente fue creada con <a href="http://fontastic.me/">Fontastic</a></p>
         </section>
 
         <!--CSS mapping-->
         <section class="line">
-            <h2>Mapeo CSS</h2>
+            <h2>CSS mapping</h2>
             <ul class="glyphs css-mapping flexbox">
                 <li>
                     <div class="blue-1 icon ni-backend"></div>
@@ -185,115 +184,115 @@ sssss/    `sssss:      ```         hdddds.``-ydddd+ sdddds.``-ydddd+ /ddddd/oddd
 
         <!--Character mapping-->
         <section class="line">
-            <h2>Asignación de caracteres</h2>
+            <h2>Character mapping</h2>
             <ul class="glyphs character-mapping flexbox">
                 <li>
-                    <input type="text" readonly="readonly" value="a">
                     <div data-icon="a" class="icon"></div>
+                    <input type="text" readonly="readonly" value="a">
                 </li>
                 <li>
-                    <input type="text" readonly="readonly" value="b">
                     <div data-icon="b" class="icon"></div>
+                    <input type="text" readonly="readonly" value="b">
                 </li>
                 <li>
-                    <input type="text" readonly="readonly" value="c">
                     <div data-icon="c" class="icon"></div>
+                    <input type="text" readonly="readonly" value="c">
                 </li>
                 <li>
-                    <input type="text" readonly="readonly" value="d">
                     <div data-icon="d" class="icon"></div>
+                    <input type="text" readonly="readonly" value="d">
                 </li>
                 <li>
-                    <input type="text" readonly="readonly" value="e">
                     <div data-icon="e" class="icon"></div>
+                    <input type="text" readonly="readonly" value="e">
                 </li>
                 <li>
-                    <input type="text" readonly="readonly" value="f">
                     <div data-icon="f" class="icon"></div>
+                    <input type="text" readonly="readonly" value="f">
                 </li>
                 <li>
-                    <input type="text" readonly="readonly" value="g">
                     <div data-icon="g" class="icon"></div>
+                    <input type="text" readonly="readonly" value="g">
                 </li>
                 <li>
-                    <input type="text" readonly="readonly" value="h">
                     <div data-icon="h" class="icon"></div>
+                    <input type="text" readonly="readonly" value="h">
                 </li>
                 <li>
-                    <input type="text" readonly="readonly" value="i">
                     <div data-icon="i" class="icon"></div>
+                    <input type="text" readonly="readonly" value="i">
                 </li>
                 <li>
-                    <input type="text" readonly="readonly" value="j">
                     <div data-icon="j" class="icon"></div>
+                    <input type="text" readonly="readonly" value="j">
                 </li>
                 <li>
-                    <input type="text" readonly="readonly" value="k">
                     <div data-icon="k" class="icon"></div>
+                    <input type="text" readonly="readonly" value="k">
                 </li>
                 <li>
-                    <input type="text" readonly="readonly" value="l">
                     <div data-icon="l" class="icon"></div>
+                    <input type="text" readonly="readonly" value="l">
                 </li>
                 <li>
-                    <input type="text" readonly="readonly" value="m">
                     <div data-icon="m" class="icon"></div>
+                    <input type="text" readonly="readonly" value="m">
                 </li>
                 <li>
-                    <input type="text" readonly="readonly" value="n">
                     <div data-icon="n" class="icon"></div>
+                    <input type="text" readonly="readonly" value="n">
                 </li>
                 <li>
-                    <input type="text" readonly="readonly" value="o">
                     <div data-icon="o" class="icon"></div>
+                    <input type="text" readonly="readonly" value="o">
                 </li>
                 <li>
-                    <input type="text" readonly="readonly" value="p">
                     <div data-icon="p" class="icon"></div>
+                    <input type="text" readonly="readonly" value="p">
                 </li>
                 <li>
-                    <input type="text" readonly="readonly" value="q">
                     <div data-icon="q" class="icon"></div>
+                    <input type="text" readonly="readonly" value="q">
                 </li>
                 <li>
-                    <input type="text" readonly="readonly" value="r">
                     <div data-icon="r" class="icon"></div>
+                    <input type="text" readonly="readonly" value="r">
                 </li>
                 <li>
-                    <input type="text" readonly="readonly" value="s">
                     <div data-icon="s" class="icon"></div>
+                    <input type="text" readonly="readonly" value="s">
                 </li>
                 <li>
-                    <input type="text" readonly="readonly" value="t">
                     <div data-icon="t" class="icon"></div>
+                    <input type="text" readonly="readonly" value="t">
                 </li>
                 <li>
-                    <input type="text" readonly="readonly" value="u">
                     <div data-icon="u" class="icon"></div>
+                    <input type="text" readonly="readonly" value="u">
                 </li>
                 <li>
-                    <input type="text" readonly="readonly" value="v">
                     <div data-icon="v" class="icon"></div>
+                    <input type="text" readonly="readonly" value="v">
                 </li>
                 <li>
-                    <input type="text" readonly="readonly" value="w">
                     <div data-icon="w" class="icon"></div>
+                    <input type="text" readonly="readonly" value="w">
                 </li>
                 <li>
-                    <input type="text" readonly="readonly" value="x">
                     <div data-icon="x" class="icon"></div>
+                    <input type="text" readonly="readonly" value="x">
                 </li>
                 <li>
-                    <input type="text" readonly="readonly" value="y">
                     <div data-icon="y" class="icon"></div>
+                    <input type="text" readonly="readonly" value="y">
                 </li>
                 <li>
-                    <input type="text" readonly="readonly" value="z">
                     <div data-icon="z" class="icon"></div>
+                    <input type="text" readonly="readonly" value="z">
                 </li>
                 <li>
-                    <input type="text" readonly="readonly" value="A">
                     <div data-icon="A" class="icon"></div>
+                    <input type="text" readonly="readonly" value="A">
                 </li>
             </ul>
         </section>
