Objetos/Render Historias, Nosotros. Ajustes de maquetación y estilos

--- a/index-test.html
+++ b/index-test.html
@@ -25,17 +25,20 @@ Logo Ascii
 </head>
 
 <body>
-  <div id="main" class="container">
+  <main class="container">
     <header class="flexbox">
         <div class="col-20 logo"></div>
         <div class="col-80 sm"></div>
     </header>
-    <div id="bio" class="col-1 clear-fix">
-      <div class="bio-info flex-box"></div>
-    </div>
+    <section id="Ini" class="line flexbox">
+        <div class="col-50">
+            <div class="stories line"></div>
+            <div id="Nos"></div>
+        </div>
+    </section>    
     <div id="projects" class="col-1 clear-fix">
     </div>
-    </div>
+  </main>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="js/helper.js"></script>
   <script src="js/builder.js"></script>
