--- a/index-test.html
+++ b/index-test.html
@@ -3,10 +3,10 @@
 <!--
 Logo Ascii
 -->
-
 <head>
     <title>novanet - diseño multimedia</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="El buen diseño es garantía de exito en tu negocio." />
     <meta name="author" content="">
@@ -14,34 +14,31 @@ Logo Ascii
     <link rel="shortcut icon" href="favicon.ico">
     <!--Link GoogleFont-->
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,600,700,800,900" rel="stylesheet">
+    <!--Link FontAwesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
     <!--Link Normalize-->
     <link href="css/normalize.css" rel="stylesheet" type="text/css">
     <!--Link CSS-->
     <link href="css/base.css" rel="stylesheet" type="text/css">
-    <!--Link FontAwesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
-    <!--Medias Queries-->
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 </head>
-
 <body>
   <main class="container">
     <header class="flexbox">
         <div class="col-20 logo"></div>
         <div class="col-80 sm"></div>
     </header>
-    <section id="Ini" class="line flexbox">
+    <section id="ini" class="line flexbox">
         <div class="col-50">
             <div class="stories line"></div>
-            <div id="Nos"></div>
+            <div id="nos"></div>
         </div>
-    </section>    
+    </section>
     <div id="projects" class="col-1 clear-fix">
     </div>
   </main>
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+  <script src="js/jquery-1.8.3.js"></script>
+  <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
   <script src="js/helper.js"></script>
   <script src="js/builder.js"></script>
 </body>
-
 </html>
