Objeto Hacemos con toda la DB. Clase constructora para los tabs y data de todas las secciones. Eventos de focos de botones en tabs

--- a/index-test.html
+++ b/index-test.html
@@ -33,6 +33,7 @@ Logo Ascii
             <div id="nos"></div>
         </div>
     </section>
+    <section id="hac" class="line flexbox"></section>
     <div id="projects" class="col-1 clear-fix">
     </div>
   </main>
