-  Ajustes en la funciones render del contenido de los tabs. Toda la DB del objeto Hacemos, renderiza completa.

--- a/index-test.html
+++ b/index-test.html
@@ -28,14 +28,11 @@ Logo Ascii
         <div class="col-80 sm"></div>
     </header>
     <section id="ini" class="line flexbox">
-        <div class="col-50">
-            <div class="stories line"></div>
-            <div id="nos"></div>
-        </div>
+      <div class="stories line"></div>
+      <div id="nos"></div>
     </section>
-    <section id="hac" class="line flexbox"></section>
-    <div id="projects" class="col-1 clear-fix">
-    </div>
+    <section id="hac" class="line flexbox col-1"></section>
+    <div id="projects" class="col-1 clear-fix"> </div>
   </main>
   <script src="js/jquery-1.8.3.js"></script>
   <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
