--- a/index-test.html
+++ b/index-test.html
@@ -24,8 +24,8 @@ Logo Ascii
 <body>
   <main class="container">
     <header class="flexbox">
-        <div class="col-20 logo"></div>
-        <div class="col-80 sm"></div>
+        <div class="logo"></div>
+        <div class="sm"></div>
     </header>
     <section id="ini" class="line flexbox">
       <div class="stories line"></div>
