Ajustes layout flexbox en <header>

--- a/index-test.html
+++ b/index-test.html
@@ -23,16 +23,16 @@ Logo Ascii
 </head>
 <body>
   <main class="container">
-    <header class="flexbox">
+    <header>
         <div class="logo"></div>
         <div class="sm"></div>
     </header>
-    <section id="ini" class="line flexbox">
+    <section id="ini" class="line">
       <div class="stories line"></div>
       <div id="nos"></div>
     </section>
-    <section id="hac" class="line flexbox col-1"></section>
-    <div id="projects" class="col-1 clear-fix"> </div>
+    <section id="hac" class="line"></section>
+    <div id="projects"></div>
   </main>
   <script src="js/jquery-1.8.3.js"></script>
   <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
