- Adaptación flexbox a las secciones inicio, nosotros y hacemos. Correcciones en render del contenido de los tabs. Ajustes generales de estilos y maquetación.

--- a/index-test.html
+++ b/index-test.html
@@ -30,6 +30,7 @@ Logo Ascii
     <section id="ini" class="line">
       <div class="stories line"></div>
       <div id="nos"></div>
+      <canvas class="anim"></canvas>
     </section>
     <section id="hac" class="line"></section>
     <div id="projects"></div>
