--- a/index-test.html
+++ b/index-test.html
@@ -33,7 +33,7 @@ Logo Ascii
       <canvas class="anim"></canvas>
     </section>
     <section id="hac" class="line"></section>
-    <div id="projects"></div>
+    <section id="pro"></div>
   </main>
   <script src="js/jquery-1.8.3.js"></script>
   <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
