--- a/index-test.html
+++ b/index-test.html
@@ -12,14 +12,17 @@ Logo Ascii
     <meta name="author" content="">
     <!--favicon-->
     <link rel="shortcut icon" href="favicon.ico">
-    <!--Link GoogleFont-->
+    <!--GoogleFont-->
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,600,700,800,900" rel="stylesheet">
-    <!--Link FontAwesome -->
+    <!--FontAwesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
-    <!--Link Normalize-->
+    <!--Normalize-->
     <link href="css/normalize.css" rel="stylesheet" type="text/css">
-    <!--Link CSS-->
+    <!--Main styles-->
     <link href="css/base.css" rel="stylesheet" type="text/css">
+    <!--Slick Carousel-->
+    <link rel="stylesheet" type="text/css" href="css/slick.css" />
+    <link rel="stylesheet" type="text/css" href="css/slick-theme.css" />
 </head>
 <body>
   <main class="container">
@@ -33,11 +36,52 @@ Logo Ascii
       <canvas class="anim"></canvas>
     </section>
     <section id="hac" class="line"></section>
-    <section id="por"></div>
+    <section id="por" class="line"></section>
+    <section id="cli" class="line"></section>
   </main>
   <script src="js/jquery-1.8.3.js"></script>
   <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
   <script src="js/helper.js"></script>
   <script src="js/builder.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="js/slick.min.js"></script>
+  <script>
+      $('.slider').slick({
+          dots: true,
+          infinite: false,
+          speed: 300,
+          slidesToShow: 6,
+          slidesToScroll: 1,
+          responsive: [{
+                  breakpoint: 1024,
+                  settings: {
+                      slidesToShow: 3,
+                      slidesToScroll: 3,
+                      infinite: true,
+                      dots: true
+                  }
+              },
+              {
+                  breakpoint: 768,
+                  settings: {
+                      slidesToShow: 2,
+                      slidesToScroll: 2
+                  }
+              },
+              {
+                  breakpoint: 480,
+                  settings: {
+                      slidesToShow: 1,
+                      slidesToScroll: 1
+                  }
+              }
+              // You can unslick at a given breakpoint now by adding:
+              // settings: "unslick"
+              // instead of a settings object
+          ]
+      });
+
+  </script>
 </body>
 </html>
