--- a/index-test.html
+++ b/index-test.html
@@ -33,7 +33,7 @@ Logo Ascii
     <section id="ini" class="line">
       <div class="stories line"></div>
       <div id="nos"></div>
-      <canvas class="anim"></canvas>
+      <canvas class="anim">&nbsp;</canvas>
     </section>
     <section id="hac" class="line"></section>
     <section id="por" class="line"></section>
@@ -47,41 +47,40 @@ Logo Ascii
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script type="text/javascript" src="js/slick.min.js"></script>
   <script>
-      $('.slider').slick({
-          dots: true,
-          infinite: false,
-          speed: 300,
-          slidesToShow: 6,
-          slidesToScroll: 1,
-          responsive: [{
-                  breakpoint: 1024,
-                  settings: {
-                      slidesToShow: 3,
-                      slidesToScroll: 3,
-                      infinite: true,
-                      dots: true
-                  }
-              },
-              {
-                  breakpoint: 768,
-                  settings: {
-                      slidesToShow: 2,
-                      slidesToScroll: 2
-                  }
-              },
-              {
-                  breakpoint: 480,
-                  settings: {
-                      slidesToShow: 1,
-                      slidesToScroll: 1
-                  }
+  $('.slider').slick({
+      dots: true,
+      infinite: false,
+      speed: 300,
+      slidesToShow: 6,
+      slidesToScroll: 2,
+      responsive: [{
+              breakpoint: 1024,
+              settings: {
+                  slidesToShow: 4,
+                  slidesToScroll: 2,
+                  infinite: true,
+                  dots: true
               }
-              // You can unslick at a given breakpoint now by adding:
-              // settings: "unslick"
-              // instead of a settings object
-          ]
-      });
-
+          },
+          {
+              breakpoint: 768,
+              settings: {
+                  slidesToShow: 4,
+                  slidesToScroll: 1
+              }
+          },
+          {
+              breakpoint: 480,
+              settings: {
+                  slidesToShow: 2,
+                  slidesToScroll: 1
+              }
+          }
+          // You can unslick at a given breakpoint now by adding:
+          // settings: "unslick"
+          // instead of a settings object
+      ]
+  });
   </script>
 </body>
 </html>
