--- a/index-test.html
+++ b/index-test.html
@@ -22,6 +22,8 @@ Logo Ascii
     <link href="css/base.css" rel="stylesheet" type="text/css">
     <!--Slick Carousel-->
     <link rel="stylesheet" type="text/css" href="css/slick.css" />
+    <!--Slick Carousel-->
+    <script language="JavaScript" src="js/gen_validatorv31.js" type="text/javascript"></script>
 </head>
 <body>
   <main class="container">
@@ -96,5 +98,14 @@ Logo Ascii
     }
   </script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBB4845mdrbpL1Ub833ZI1JzneXenLBU_Q&callback=initMap" async defer></script>
+  <script language="JavaScript">
+  // Code for validating the form
+  // Visit http://www.javascript-coder.com/html-form/javascript-form-validation.phtml
+  // for details
+  var frmvalidator  = new Validator("myemailform");
+  frmvalidator.addValidation("name","req","Please provide your name");
+  frmvalidator.addValidation("email","req","Please provide your email");
+  frmvalidator.addValidation("email","email","Please enter a valid email address");
+  </script>
 </body>
 </html>
