--- a/index.html
+++ b/index.html
@@ -3,33 +3,35 @@
 <!--
 Logo Ascii
 -->
+
 <head>
-    <title>novanet - diseño multimedia</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="El buen diseño es garantía de exito en tu negocio." />
-    <meta name="author" content="">
-    <!--favicon-->
-    <link rel="shortcut icon" href="favicon.ico">
-    <!--GoogleFont-->
-    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,600,700,800,900" rel="stylesheet">
-    <!--FontAwesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
-    <!--Normalize-->
-    <link href="css/normalize.css" rel="stylesheet" type="text/css">
-    <!--Main styles-->
-    <link href="css/base.css" rel="stylesheet" type="text/css">
-    <!--Slick Carousel-->
-    <link rel="stylesheet" type="text/css" href="css/slick.css" />
-    <!--Slick Carousel-->
-    <script language="JavaScript" src="js/gen_validatorv31.js" type="text/javascript"></script>
+  <title>novanet - diseño multimedia</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="El buen diseño es garantía de exito en tu negocio." />
+  <meta name="author" content="">
+  <!--favicon-->
+  <link rel="shortcut icon" href="favicon.ico">
+  <!--GoogleFont-->
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,600,700,800,900" rel="stylesheet">
+  <!--FontAwesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
+  <!--Normalize-->
+  <link href="css/normalize.css" rel="stylesheet" type="text/css">
+  <!--Main styles-->
+  <link href="css/base.css" rel="stylesheet" type="text/css">
+  <!--Slick Carousel-->
+  <link rel="stylesheet" type="text/css" href="css/slick.css" />
+  <!--Slick Carousel-->
+  <script language="JavaScript" src="js/gen_validatorv31.js" type="text/javascript"></script>
 </head>
+
 <body>
   <main class="container">
     <header>
-        <div class="logo"></div>
-        <div class="sm"></div>
+      <div class="logo"></div>
+      <div class="sm"></div>
     </header>
     <section id="ini" class="line">
       <div class="stories line"></div>
@@ -55,43 +57,46 @@ Logo Ascii
   <script type="text/javascript" src="js/slick.min.js"></script>
   <script>
     $('.slider').slick({
-        dots: true,
-        infinite: false,
-        speed: 300,
-        slidesToShow: 6,
-        slidesToScroll: 2,
-        responsive: [{
-                breakpoint: 1024,
-                settings: {
-                    slidesToShow: 4,
-                    slidesToScroll: 2,
-                    infinite: true,
-                    dots: true
-                }
-            },
-            {
-                breakpoint: 768,
-                settings: {
-                    slidesToShow: 4,
-                    slidesToScroll: 1
-                }
-            },
-            {
-                breakpoint: 480,
-                settings: {
-                    slidesToShow: 2,
-                    slidesToScroll: 1
-                }
-            }
-            // You can unslick at a given breakpoint now by adding:
-            // settings: "unslick"
-            // instead of a settings object
-        ]
+      dots: true,
+      infinite: false,
+      speed: 300,
+      slidesToShow: 6,
+      slidesToScroll: 2,
+      responsive: [{
+          breakpoint: 1024,
+          settings: {
+            slidesToShow: 4,
+            slidesToScroll: 2,
+            infinite: true,
+            dots: true
+          }
+        },
+        {
+          breakpoint: 768,
+          settings: {
+            slidesToShow: 4,
+            slidesToScroll: 1
+          }
+        },
+        {
+          breakpoint: 480,
+          settings: {
+            slidesToShow: 2,
+            slidesToScroll: 1
+          }
+        }
+        // You can unslick at a given breakpoint now by adding:
+        // settings: "unslick"
+        // instead of a settings object
+      ]
     });
   </script>
   <script>
     function initMap() {
-      var uluru = {lat: 10.489139, lng: -66.878127};
+      var uluru = {
+        lat: 10.489139,
+        lng: -66.878127
+      };
       var map = new google.maps.Map(document.getElementById('map'), {
         zoom: 12,
         center: uluru
@@ -104,13 +109,14 @@ Logo Ascii
   </script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBB4845mdrbpL1Ub833ZI1JzneXenLBU_Q&callback=initMap" async defer></script>
   <script language="JavaScript">
-  // Code for validating the form
-  // Visit http://www.javascript-coder.com/html-form/javascript-form-validation.phtml
-  // for details
-  var frmvalidator  = new Validator("myemailform");
-  frmvalidator.addValidation("name","req","Please provide your name");
-  frmvalidator.addValidation("email","req","Please provide your email");
-  frmvalidator.addValidation("email","email","Please enter a valid email address");
+    // Code for validating the form
+    // Visit http://www.javascript-coder.com/html-form/javascript-form-validation.phtml
+    // for details
+    var frmvalidator = new Validator("myemailform");
+    frmvalidator.addValidation("name", "req", "Please provide your name");
+    frmvalidator.addValidation("email", "req", "Please provide your email");
+    frmvalidator.addValidation("email", "email", "Please enter a valid email address");
   </script>
 </body>
+
 </html>
