--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Logo Ascii
       <canvas class="anim">&nbsp;</canvas>
     </section>
     <section id="hac" class="line"></section>
-    <section id="por" class="line"></section>
+    <section id="por-ini" class="line"></section>
     <section id="cli" class="line"></section>
     <section id="con" class="line"></section>
     <footer>
@@ -98,7 +98,7 @@ Logo Ascii
         lng: -66.878127
       };
       var map = new google.maps.Map(document.getElementById('map'), {
-        zoom: 12,
+        zoom: 16,
         center: uluru
       });
       var marker = new google.maps.Marker({
