--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@ Logo Ascii
 </head>
 
 <body>
-  <main class="container">
+  <nav id="nav"></nav>
+  <main id="main" class="container">
     <header>
       <div class="logo"></div>
       <div class="sm"></div>
@@ -57,6 +58,10 @@ Logo Ascii
   <script src="js/builder.js"></script>
   <script>
     // Sections creation and renderization
+
+    const Nav = new SectionTemplate();
+    Nav.sectionHeader(navigation, '#nav', 'navigation');
+
     const storiesPrint = new StoriesTemplate();
     storiesPrint.display(storiesHome);
 
@@ -91,7 +96,18 @@ Logo Ascii
     // Catching and removing empty and undefined elements
     $('p:contains("undefined")').remove();
     $('a[href*="undefined"]').remove();
-    
+
+  // Scrolling for all anchors on the page
+    $('nav ul.tabs a.btn[href^="#"]').on('click', function(event) {
+      var target = $(this.getAttribute('href'));
+      if( target.length ) {
+          event.preventDefault();
+          $('html, body').stop().animate({
+              scrollTop: target.offset().top
+          }, 1000);
+      }
+    });
+
     // Modal for portfolio images
     $('.thumbs').on('click', 'a.btn', function(e) {
       e.preventDefault();
@@ -179,9 +195,9 @@ Logo Ascii
     // Visit http://www.javascript-coder.com/html-form/javascript-form-validation.phtml
     // for details
     var frmvalidator = new Validator("myemailform");
-    frmvalidator.addValidation("name", "req", "Please provide your name");
-    frmvalidator.addValidation("email", "req", "Please provide your email");
-    frmvalidator.addValidation("email", "email", "Please enter a valid email address");
+    frmvalidator.addValidation("name", "req", "Por favor introduce tu nombre");
+    frmvalidator.addValidation("email", "req", "Por favor introduce tu email");
+    frmvalidator.addValidation("email", "email", "Por favor introduce uan dirección de correo válida");
   </script>
 </body>
 
