--- a/portafolio.html
+++ b/portafolio.html
@@ -28,6 +28,7 @@ Logo Ascii
 </head>
 
 <body>
+  <nav id="nav"></nav>
   <main class="container">
     <header>
       <div class="logo"></div>
@@ -49,6 +50,9 @@ Logo Ascii
   <script src="js/builder.js"></script>
   <script>
     // Sections creation and renderization
+    const Nav = new SectionTemplate();
+    Nav.sectionHeader(navigationInt, '#nav', 'navigation');
+
     const storiesPrint = new StoriesTemplate();
     storiesPrint.display(storiesPor);
 
@@ -62,7 +66,17 @@ Logo Ascii
     $("a.section-link").remove();
     $('p:contains("undefined")').remove();
     $('a[href*="undefined"]').remove();
-    
+
+    $('nav ul.tabs a.btn[href^="#"]').on('click', function(event) {
+      var target = $(this.getAttribute('href'));
+      if( target.length ) {
+          event.preventDefault();
+          $('html, body').stop().animate({
+              scrollTop: target.offset().top
+          }, 1000);
+      }
+    });
+
     // Modal for portfolio images
     $('.thumbs').on('click', 'a.btn', function(e) {
       e.preventDefault();
